Gateway/envoyproxy-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gateway-class
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
