Gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: rollout-gw
spec:
  gatewayClassName: gateway-class
  listeners:
  - protocol: HTTP
    port: 80
    name: rollout
